[package]
name = "quic-demo"
version = "0.11.0"
edition = "2021"

[dependencies]
quinn = "0.10.1"
rustls = { version = "0.21.0", default-features = false }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", ] }
rcgen = "0.11.1"
bytes = "1.4.0"
color-eyre = "0.6.2"
log = "0.4"
pretty_env_logger = "0.5.0"

